[workspace]
resolver = "2"
members = [
    "app-libs/parentchain-interface",
    "app-libs/sgx-runtime",
    "app-libs/stf",
    "cli",
    "core/direct-rpc-client",
    "core/direct-rpc-server",
    "core/peer-top-broadcaster",
    "core/offchain-worker-executor",
    "core/parentchain/block-import-dispatcher",
    "core/parentchain/block-importer",
    "core/parentchain/indirect-calls-executor",
    "core/parentchain/light-client",
    "core/parentchain/parentchain-crate",
    "core/rest-client",
    "core/rpc-client",
    "core/rpc-server",
    "core/tls-websocket-server",
    "core-primitives/attestation-handler",
    "core-primitives/binary-merkle-tree",
    "core-primitives/import-queue",
    "core-primitives/component-container",
    "core-primitives/enclave-api",
    "core-primitives/enclave-api/ffi",
    "core-primitives/enclave-metrics",
    "core-primitives/extrinsics-factory",
    "core-primitives/hashing",
    "core-primitives/networking-utils",
    "core-primitives/node-api",
    "core-primitives/node-api/api-client-extensions",
    "core-primitives/node-api/api-client-types",
    "core-primitives/node-api/factory",
    "core-primitives/node-api/metadata",
    "core-primitives/node-api/metadata-provider",
    "core-primitives/nonce-cache",
    "core-primitives/ocall-api",
    "core-primitives/primitives-cache",
    "core-primitives/rpc",
    "core-primitives/settings",
    "core-primitives/sgx/crypto",
    "core-primitives/sgx/io",
    "core-primitives/sgx-runtime-primitives",
    "core-primitives/stf-executor",
    "core-primitives/stf-interface",
    "core-primitives/stf-primitives",
    "core-primitives/stf-state-handler",
    "core-primitives/stf-state-observer",
    "core-primitives/storage",
    "core-primitives/substrate-sgx/environmental",
    "core-primitives/substrate-sgx/externalities",
    "core-primitives/substrate-sgx/sp-io",
    "core-primitives/test",
    "core-primitives/time-utils",
    "core-primitives/top-pool",
    "core-primitives/top-pool-author",
    "core-primitives/types",
    "core-primitives/utils",
    "service",
    "sidechain/block-composer",
    "sidechain/block-verification",
    "sidechain/consensus/aura",
    "sidechain/consensus/common",
    "sidechain/consensus/slots",
    "sidechain/fork-tree",
    "sidechain/peer-fetch",
    "sidechain/primitives",
    "sidechain/rpc-handler",
    "sidechain/sidechain-crate",
    "sidechain/state",
    "sidechain/validateer-fetch",
    "litentry/primitives",
    "litentry/pallets/identity-management",
    "litentry/core/stf-task/sender",
    "litentry/core/stf-task/receiver",
    "litentry/core/identity-verification",
    "litentry/core/assertion-build",
    "litentry/core/data-providers",
    "litentry/core/mock-server",
    "litentry/core/vc-task/sender",
    "litentry/core/vc-task/receiver",
    "litentry/core/dynamic-assertion",
    "litentry/core/evm-dynamic-assertions",
    "litentry/core/rsa-wrapper",
    "litentry/core/parachain-extrinsic-task/sender",
    "litentry/core/parachain-extrinsic-task/receiver",
]

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
sgx_alloc = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_crypto = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_libc = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_rand = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_serialize = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_serialize_derive = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_trts = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_tstd = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_types = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }

[patch.crates-io]
ring = { git = "https://github.com/betrusted-io/ring-xous", branch = "0.16.20-cleanup" }

[patch."https://github.com/apache/incubator-teaclave-sgx-sdk"]
sgx_alloc = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_crypto = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_libc = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_rand = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_serialize = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_serialize_derive = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_tprotected_fs = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_trts = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_tse = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_tstd = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_types = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
sgx_urts = { git = "https://github.com/Kailai-Wang/incubator-teaclave-sgx-sdk", branch = "v2.0.0-sdk-2.21" }
